# se-ticket-system

./: .env  Cargo.toml  README.md
migrations/2023-06-03-032237_create_approval_info/: down.sql  up.sql
migrations/2023-06-03-032611_create_employee_info/: down.sql  up.sql
migrations/2023-06-03-032737_create_account_info/: down.sql  up.sql
migrations/2023-06-03-032842_create_operation_info/: down.sql  up.sql
migrations/2023-06-03-032950_create_employee_operation_info/: down.sql  up.sql
migrations/2023-06-03-033337_create_ticket_info/: down.sql  up.sql
migrations/2023-06-03-033511_create_approved_info/: down.sql  up.sql
migrations/2023-06-03-033627_create_fund_list/: down.sql  up.sql
migrations/2023-06-03-033725_create_apply_dev_info/: down.sql  up.sql
migrations/2023-06-03-033811_create_assist_info/: down.sql  up.sql
migrations/2023-06-04-061040_create_account_info_unique_employee_id/: down.sql  up.sql
migrations/2023-06-04-072306_change_employee_operation_info_primary_key/: down.sql  up.sql
migrations/2023-06-04-074944_change_approved_info_primary_key/: down.sql  up.sql
migrations/2023-06-04-075222_change_apply_dev_info_primary_key/: down.sql  up.sql
migrations/2023-06-04-075530_change_assist_info_primary_key/: down.sql  up.sql
migrations/2023-06-04-081356_rename_assist_info_receiver_id/: down.sql  up.sql
migrations/2023-06-10-065014_create_system_info/: down.sql  up.sql
migrations/2023-06-10-065149_add_foreign_key_system_id/: down.sql  up.sql
src/: error.rs  main.rs  router.rs  schema.rs
src/api/: mod.rs
static/: 1.txt
(+74 files in other folders)
