[package]
name = "se-ticket-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4"
base64 = "0.21.2"
bcrypt = "0.14.0"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
    "serde_json",
] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
log = "0.4.18"
passwords = "3.1.13"
r2d2 = "0.8.10"
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
